# TDD-example

./: .gitignore  README.md  pyproject.toml
src/inventory_app/: Inventory.py  __init__.py  cooking_service.py  inventory_manager.py  recipe.py
tests/: test_cooking_service.py  test_example.py  test_inventory.py  test_inventory_live.py  test_inventory_loader.py  test_inventory_manager.py  test_recipe.py
tests/persistance/: accumulated.json5  invalid.json5  live.json5  valid.json5
