[tool.poetry]
name = "inventory-app"
version = "0.1.0"
description = "An inventory app to track what you got left"
authors = ["Jonathan Sigrist <jonathan.sigrist@xitaso.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
json5 = "^0.9.14"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
coverage = {extras = ["toml"], version = "^7.3.2"}
flake8 = "^6.1.0"
flake8-pyproject = "^1.2.3"
flake8-bugbear = "^23.12.2"
flake8-docstrings = "^1.7.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160
skip-string-normalization = true

[tool.flake8]
max-line-length = 160
max-complexity = 10
ignore = "D107"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 100
